--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body {
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  max-width: 800px;
+  border-top: 10px solid blanchedalmond;
+  border-bottom: 10px solid blanchedalmond;
+  height: 100%;
 }
 
 .task-area {
@@ -25,12 +29,13 @@ body {
 
 .task-tab div {
   padding: 1em;
+  cursor: pointer;
 }
 
 .task {
-    display: flex;
-    justify-content: space-between;
-    padding: 1em;
+  display: flex;
+  justify-content: space-between;
+  padding: 1em;
 }
 
 #under-line {
@@ -38,11 +43,12 @@ body {
   background-color: rgb(255, 116, 116);
   position: absolute;
   width: 68px;
-  left:0px;
-  top: 52px;
-  padding: 0px;
+  left: 0px;
+  top: 53px;
+  padding: 2px;
 }
 
-
-
-
+.done {
+  text-decoration: line-through;
+  background-color: gray;
+}
